examples/datalog/21_query_features/05_complex_queries.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_complex_query
Knowledge graph 'test_complex_query' created.
Switched to knowledge graph: test_complex_query
> .kg use test_complex_query
Switched to knowledge graph: test_complex_query
> +orders[(1, 100, 10), (2, 100, 20), (3, 200, 15), (4, 200, 5)].
Inserted 4 fact(s) into 'orders'.
> +customers[(100, 1000), (200, 2000)].
Inserted 2 fact(s) into 'customers'.
> +large_orders(OrderId, CustCredit) :- orders(OrderId, CustId, Qty), customers(CustId, CustCredit), Qty > 10.
Rule 'large_orders' registered.
> ?- large_orders(X, Y).
2 rows:
  (2, 1000)
  (3, 2000)
> +customer_total(CustId, sum<Qty>) :- orders(_, CustId, Qty).
Rule 'customer_total' registered.
> ?- customer_total(X, Y).
2 rows:
  (100, 30)
  (200, 20)
> +employees[(1, 50000, 10), (2, 60000, 10), (3, 55000, 20)].
Inserted 3 fact(s) into 'employees'.
> +dept_10(Id, Sal) :- employees(Id, Sal, 10).
Rule 'dept_10' registered.
> +high_paid_dept10(Id) :- dept_10(Id, Sal), Sal > 55000.
Rule 'high_paid_dept10' registered.
> ?- high_paid_dept10(X).
1 rows:
  (2)
> +pairs[(1, 2), (2, 3), (3, 4), (1, 3)].
Inserted 4 fact(s) into 'pairs'.
> +two_hop(A, C) :- pairs(A, B), pairs(B, C).
Rule 'two_hop' registered.
> ?- two_hop(X, Y).
3 rows:
  (1, 3)
  (1, 4)
  (2, 4)
> +order_value(Oid, Qty*10) :- orders(Oid, _, Qty).
Script error: Parse error: Invalid term: 'Qty*10'
