examples/datalog/21_query_features/05_complex_queries.dl
% Test: Complex Query Patterns
% Category: 21_query_features
% Description: Tests combining multiple query features

.kg create test_complex_query
.kg use test_complex_query

% Multi-table schema
+orders[(1, 100, 10), (2, 100, 20), (3, 200, 15), (4, 200, 5)].
+customers[(100, 1000), (200, 2000)].

% Join + projection + filter
+large_orders(OrderId, CustCredit) :- orders(OrderId, CustId, Qty), customers(CustId, CustCredit), Qty > 10.
?- large_orders(X, Y).

% Join + aggregation
+customer_total(CustId, sum<Qty>) :- orders(_, CustId, Qty).
?- customer_total(X, Y).

% Nested views
+employees[(1, 50000, 10), (2, 60000, 10), (3, 55000, 20)].
+dept_10(Id, Sal) :- employees(Id, Sal, 10).
+high_paid_dept10(Id) :- dept_10(Id, Sal), Sal > 55000.
?- high_paid_dept10(X).

% Self-join pattern
+pairs[(1, 2), (2, 3), (3, 4), (1, 3)].
+two_hop(A, C) :- pairs(A, B), pairs(B, C).
?- two_hop(X, Y).

% Aggregation on computed value - use head arithmetic
+order_value(Oid, Qty*10) :- orders(Oid, _, Qty).
+total_value(sum<V>) :- order_value(_, V).
?- total_value(T).

% Cleanup
.kg use default
.kg drop test_complex_query
